feat: Add Wallet Initialization Gamification Trigger - MEED-2208 - Meeds-io/MIPs#50 (#390)
* This change will introduce a new Trigger to gamification for wallet
first creation.
* Allow to send initial funds to First initialization of Metamask Wallet
Prior to this change, when initializing Metamask wallet for the first
time for a user, the initial funds wasn't sent to user. This change will
allow to send initial funds for a given user for the first time only by
triggering the generic event 'exo.wallet.addressAssociation.new' which
was triggered only when the wallet is initialized with a Browser Wallet.